Initial commit: Diabetes prediction Streamlit app

--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -1463,11 +1463,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "ba2c9fa5-728e-4e8a-b7d7-213fd033d4b8",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "074f8597",
+   "metadata": {},
+   "source": [
+    "## What is the difference between precision and recall?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37ea5784",
+   "metadata": {},
+   "source": [
+    "Precision and recall are evaluation metrics used to measure the performance of classification models, especially when dealing with imbalanced data. Precision indicates how many of the predicted positive results are actually correct, focusing on the quality of positive predictions. In contrast, recall measures how many of the actual positive cases the model is able to identify, focusing on the model’s ability to capture all relevant instances. In simple terms, precision is about how accurate the positive predictions are, while recall is about how completely the model finds all positives."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c73f3742",
+   "metadata": {},
+   "source": [
+    "## What is cross-validation, and why is it important in binary classification?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a68da95b",
+   "metadata": {},
+   "source": [
+    "Cross-validation is a model evaluation technique used to assess how well a machine-learning model generalizes to unseen data. In binary classification, the dataset is split into multiple subsets (or folds), and the model is trained on some folds while being tested on the remaining fold; this process is repeated several times so each fold is used for testing once. The final performance is obtained by averaging the results across all folds. Cross-validation is important because it reduces the risk of overfitting, provides a more reliable estimate of model performance than a single train-test split, and ensures that the model’s precision, recall, or accuracy is consistent across different portions of the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2157b006",
+   "metadata": {},
    "source": []
   }
  ],
